Preferences - Design almost finished

--- a/static/style.css
+++ b/static/style.css
@@ -1,257 +1,159 @@
 
-.wz-app-4{
-	background:#000;
+.wz-app-3{
+	
+	left: 0;
+	border-radius: 0;
+	background: rgba(0,0,0,0.15);
 }
 
-.wz-app-4 video{
-    
-    width: 100%;
-    height: 100%;
-    
-    background: #000;
-    border-radius: 7px;
-    
+.wz-app-3 canvas{
+	
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	
 }
 
-.wz-app-4 .wz-win-maximize{
-    
-    width: 12px;
-    height: 14px;
-        
-    background: url('https://static.weezeel.com/app/4/sprite.png') -77px 0;
-    
+.wz-app-3 .preferences-top{
+	
+	width: 100%;
+	height: 39px;
+	float: left;
+	border-top: 1px solid #3B3B3B;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(37,37,37) 0%,rgb(19,19,19) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(37,37,37)),color-stop(1, rgb(19,19,19)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(37,37,37) 0%,rgb(19,19,19) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(37,37,37) 0%,rgb(19,19,19) 100%);
+    background-image: linear-gradient(0deg,rgb(19,19,19) 0%,rgb(37,37,37) 100%);
+	
 }
 
-.wz-app-4.fullscreen .wz-win-maximize{
-    background-position: 0 -33px;
+.wz-app-3 .preferences-top nav{
+	
+	text-align: center;
+	padding-top: 13px;
+	
 }
 
-.wz-app-4 .weevideo-bar{
-
-    height: 5px;
-    border-radius: 1px;
-        
+.wz-app-3 .preferences-top li{
+	
+	display: inline-block;
+	font-size: 15px;
+	color: #8D8D8D;
+	height: 24px;
+	margin: 0 20px;
 }
 
-.wz-app-4 .weevideo-bottom-shadow{
- 
-     width: 100%;   
-    height: 138px;
-    position: absolute;
-    bottom: 0px;
-
-    background-image: -moz-linear-gradient(50% 0% -90deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); 
-    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgba(0,0,0,0)),color-stop(1, rgba(0,0,0,0.5)));
-    background-image: -webkit-linear-gradient(-90deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
-    background-image: -o-linear-gradient(-90deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
-    background-image: linear-gradient(0deg,rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%);
-
+.wz-app-3 .preferences-top li.active{
+	
+	color: #FFFFFF;
+	box-shadow: 0 5px 3px -3px #34A7FF;	
+	
 }
 
-.wz-app-4 .weevideo-controls{
-    
-    width: 215px;
-    height: 37px;
-    float: left;
-    margin-left: 50px;
-    padding-top: 12px;
-    
-    background: url('https://static.weezeel.com/app/4/light.png') 41px -1px no-repeat;
-
+.wz-app-3 .preferences-bottom{
+	
+	width: 100%;
+	height: 335px;
+	float: left;
+	border-top: 1px solid #2F2F30;
+	border-bottom: 2px solid #131313;
+	background: #242425;
+	padding-top: 58px;
+	text-align: center;
+	
 }
 
-.wz-app-4 .weevideo-controls-forward{
-    
-    width: 25px;
-    height: 16px;
-    float: left;
-    margin: 6px 34px;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -52px 0;
-    
+.wz-app-3 .preferences-bottom-content{
+	display: inline-block;
 }
 
-.wz-app-4 .weevideo-controls-play{
-
-    width: 28px;
-    height: 32px;
-    float: left;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') 0 0;
-    
-}
-
-.wz-app-4.play .weevideo-controls-play{
-    background-position: -77px -15px;
-}
-
-.wz-app-4 .weevideo-controls-rewind{
-    
-    width: 25px;
-    height: 16px;
-    float: left;
-    margin: 6px 34px;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -28px 0;
-    
-}
-
-.wz-app-4 .weevideo-info{
-
-    position: absolute;
-    bottom: 18px;
-
-}
-
-.wz-app-4 .weevideo-info-backprogress{
-
-    width: 464px;
-    float: left;
-    margin-top:4px;
-    opacity: 0;
-    
-    background-color: rgba(217,217,217,0.3);
-
-}
-
-.wz-app-4 .weevideo-info-buffer{
-    
-    width: 235px;
-    
-    background-color: #F00; 
-
-}
-
-.wz-app-4 .weevideo-info-data{
-
-    font-size: 13px;
-    color: #FFF;
-    
-    width: 56px;
-    height: 13px;
-    float: left;
-    margin: 0 11px;
-    opacity:0;
-
-}
-
-.wz-app-4 .weevideo-info-data.currentTime{
-    text-align: right;
-}
-
-.wz-app-4 .weevideo-info-progress{
- 
-    width: 0px;   
-    position: relative;
-    top: -5px;
-
-    background-color: #FFF;
-
-}
-
-.wz-app-4 .weevideo-info-seeker{
-
-    width: 18px;
-    height: 22px;
-    position: relative;
-    top: -18px;
-    left: -9px;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -105px -17px;  
-
-}
-
-.wz-app-4 .weevideo-title-icon{
-    
-    width: 17px;
-    height: 12px;
-    display: inline-block;
-
-    opacity: 0;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -89px 0;
-    
-}
-
-.wz-app-4 .weevideo-title-text{
-    
-    font-size: 14px;
-    color: #FFF;
-
-    opacity: 0;
-    
+.wz-app-3 .preferences-bottom-cake{
+	
+	width: 221px;
+	height: 220px;
+	float:left;
 	position: relative;
-	top: -2px;
-    margin-left: 5px;
-    
+	background: url('https://static.weezeel.com/app/3/settings.png') no-repeat;
+	
 }
 
-.wz-app-4 .weevideo-top{
-
-    width: 100%;
-    position: absolute;
-    top: 0px;
-
+.wz-app-3 .preferences-bottom-cake-total{
+	
+	font-size: 15px;
+	font-weight: bold;
+	width: 100%;
+	text-align: center;
+	color: #FFFFFF;
+	float: left;
+	margin: 125px 0 10px;
+	
 }
 
-.wz-app-4 .weevideo-top-shadow{
-    
-    width: 100%;
-    height: 102px;
-    float: left;
-    
-    padding-top: 20px;
-    text-align: center;
-    
-    background-image: -moz-linear-gradient(50% 0% -90deg,rgba(0,0,0,0.75) 0%,rgba(0,0,0,0) 100%); 
-    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgba(0,0,0,0.75)),color-stop(1, rgba(0,0,0,0)));
-    background-image: -webkit-linear-gradient(-90deg,rgba(0,0,0,0.75) 0%,rgba(0,0,0,0) 100%);
-    background-image: -o-linear-gradient(-90deg,rgba(0,0,0,0.75) 0%,rgba(0,0,0,0) 100%);
-    background-image: linear-gradient(0deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%);
-
+.wz-app-3 .preferences-bottom-cake-free{
+	
+	font-size: 13px;
+	color: #666667;
+	width: 100%;
+	text-align: center;
+	float: left;
+	
 }
 
-.wz-app-4 .weevideo-volume-icon{
-    
-    width: 25px;
-    height: 21px;
-    float: left;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -122px -25px;
-    
+.wz-app-3 .preferences-bottom-options{
+	
+	width: 180px;
+	height: 300px;
+	float: left;
+	margin-left: 50px;
+	
+}
+	
+.wz-app-3 .preferences-bottom-options span{
+	
+	font-size: 13px;
+	font-weight: bold;
+	color: #929292;
+	margin-bottom: 6px;
+	text-align: left;
+	
 }
 
-.wz-app-4.muted .weevideo-volume-icon{
-    background-position: -122px 0;
+.wz-app-3 .preferences-bottom-options article{
+	
+	width: 180px;
+	height: 30px;
+	border-radius: 2px;
+	border-top: 1px solid #4B4B4D;
+	padding-top: 15px;
+	text-align: center;
+	margin-top: 10px; 
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(54,54,57)),color-stop(1, rgb(39,39,41)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
+    background-image: linear-gradient(0deg,rgb(39,39,41) 0%,rgb(54,54,57) 100%);
+	
+	
 }
 
-.wz-app-4 .weevideo-volume-current{
-    
-    width: 44px;
-    
-    background-color: #d9d9d9;
-    
+.wz-app-3 .preferences-bottom-options article .space{
+	
+	font-size: 15px;
+	font-weight: bold;
+	color: #FFFFFF;
+	
 }
 
-.wz-app-4 .weevideo-volume-max{
-    
-    width: 74px;
-    float: left;
-    margin-top: 6px;
-    margin-left: 9px;
-    
-    background-color: rgba(217,217,217,0.2);
-    
+.wz-app-3 .preferences-bottom-options article .price{
+	
+	font-size: 15px;
+	color: #34A7FF;
+	margin-left: 5px;
+	
 }
-
-.wz-app-4 .weevideo-volume-seeker{
-
-    width: 14px;
-    height: 17px;
-    position: relative;
-    top: -11px;
-    left: 37px;
-    
-    background: url('https://static.weezeel.com/app/4/sprite.png') -106px 0;
-
-}
+	
+	
