--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	opacity: 0;
+	display: none;
 	
 }
 
@@ -33,7 +33,7 @@
 .wz-app-3 .preferences-top nav{
 	
 	text-align: center;
-	padding-top: 13px;
+	padding-top: 12px;
 	
 }
 
@@ -56,12 +56,12 @@
 .wz-app-3 .preferences-bottom{
 	
 	width: 100%;
-	height: 335px;
+	height: 300px;
 	float: left;
 	border-top: 1px solid #2F2F30;
 	border-bottom: 2px solid #131313;
 	background: #242425;
-	padding-top: 58px;
+	padding-top: 50px;
 	text-align: center;
 	
 }
@@ -76,6 +76,7 @@
 	height: 220px;
 	float:left;
 	position: relative;
+	margin-top: 20px;
 	background: url('https://static.weezeel.com/app/3/settings.png') no-repeat;
 	
 }
@@ -107,7 +108,8 @@
 	width: 180px;
 	height: 300px;
 	float: left;
-	margin-left: 50px;
+	margin-left: 75px;
+	text-align: left;
 	
 }
 	
@@ -117,7 +119,6 @@
 	font-weight: bold;
 	color: #929292;
 	margin-bottom: 6px;
-	text-align: left;
 	
 }
 
@@ -129,14 +130,14 @@
 	border-top: 1px solid #4B4B4D;
 	padding-top: 15px;
 	text-align: center;
-	margin-top: 10px; 
+	margin-top: 10px;
+	box-shadow: 0 1px 1px #111;
 	
 	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%); 
     background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(54,54,57)),color-stop(1, rgb(39,39,41)));
     background-image: -webkit-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
     background-image: -o-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
     background-image: linear-gradient(0deg,rgb(39,39,41) 0%,rgb(54,54,57) 100%);
-	
 	
 }
 
@@ -153,6 +154,24 @@
 	font-size: 15px;
 	color: #34A7FF;
 	margin-left: 5px;
+	
+}
+
+.wz-app-3 .preferences-bottom-options article.active{
+	
+	border-top: 1px solid #50BDFF;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(60,181,255)),color-stop(1, rgb(44,153,255)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%);
+    background-image: linear-gradient(0deg,rgb(44,153,255) 0%,rgb(60,181,255) 100%);
+	
+}
+
+.wz-app-3 .preferences-bottom-options article.active .price{
+	
+	color: #A8D8FD;
 	
 }
 	
