--- a/static/style.css
+++ b/static/style.css
@@ -57,19 +57,16 @@
 .wz-app-3 .preferences-bottom{
 	
 	width: 100%;
-	height: 300px;
+	height: 350px;
 	float: left;
 	border-top: 1px solid #2F2F30;
 	border-bottom: 2px solid #131313;
 	background: #242425;
-	padding-top: 50px;
 	text-align: center;
 	
 }
 
-.wz-app-3 .preferences-bottom-content{
-	display: inline-block;
-}
+/* COMIENZO FRAGMENTO HDD */
 
 .wz-app-3 .preferences-bottom-cake{
 	
@@ -175,5 +172,263 @@
 	color: #A8D8FD;
 	
 }
+
+/* FIN FRAGMENTO HDD */
+
+/* COMIENZO FRAGMENTO ACCOUNT */
+
+.wz-app-3 .preferences-account-top{
 	
+	width: 200px;
+	height: 105px;
+	margin: 0 auto;
 	
+}
+
+.wz-app-3 .preferences-account-top figure{
+	
+	width: 81px;
+	height: 81px;
+	float: left;
+	margin-left: 42px;
+	padding: 9px;
+	border-radius: 50px;
+	
+	box-shadow: 0px 1px 1px #4B4B4D inset, 0px 1px 1px #181819;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(55,55,57) 0%,rgb(39,39,41) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(55,55,57)),color-stop(1, rgb(39,39,41)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(55,55,57) 0%,rgb(39,39,41) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(55,55,57) 0%,rgb(39,39,41) 100%);
+    background-image: linear-gradient(0deg,rgb(39,39,41) 0%,rgb(55,55,57) 100%);
+	
+}
+
+.wz-app-3 .preferences-account-top img{
+	
+	width: 81px;
+	height: 81px;
+	border-radius: 50px;
+	background: #f00;
+	display: block;
+	
+}
+
+.wz-app-3 .preferences-account-top span{
+	
+	width: 53px;
+	height: 19px;
+	float: left;
+	margin-top: 30px;
+	
+	border-bottom: 2px solid #34A7FF;
+	text-align: right;
+	font-size: 15px;
+	font-weight: bold;
+	color: #34A7FF;
+	
+}
+
+.wz-app-3 .preferences-account-middle{
+	width: 540px;
+	height: 115px;
+	margin: 0 auto;
+}
+
+.wz-app-3 .preferences-account-middle article{
+	margin-top: 4px;
+	margin-right: 90px;
+	float: right;
+}
+
+.wz-app-3 .preferences-account-middle article span{
+	
+	text-align: right;
+	color: #676768;
+	margin-right: 13px;
+	font-size: 13px;
+	float: right;
+	margin-top: 17px;
+	
+}
+
+.wz-app-3 .preferences-account-middle article input{
+	
+	width: 322px;
+	height: 44px;
+	border-radius: 2px 0px 0px 2px;
+	padding: 1px 0px 1px 1px;
+	float: right;
+	color: #FFF;
+	padding-left: 18px;
+	
+	box-shadow: 0px 1px 1px -1px #050506 inset, 0px 1px 0px #3A3A3B;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(25,25,26)),color-stop(1, rgb(21,21,22)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%);
+    background-image: linear-gradient(0deg,rgb(21,21,22) 0%,rgb(25,25,26) 100%);
+	
+}
+
+.wz-app-3 .preferences-account-middle article.active input{
+	
+	padding: 0px;
+	padding-left: 18px;
+	border: 1px solid #245276;
+	border-right: none;
+
+}
+
+.wz-app-3 .preferences-account-middle article figure{
+	
+	width: 35px;
+	height: 44px;
+	border-radius: 0px 2px 2px 0px;
+	padding: 1px 1px 1px 0px;
+	float: right;
+	
+	box-shadow: 0px 1px 1px -1px #050506 inset, 0px 1px 0px #3A3A3B;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(25,25,26)),color-stop(1, rgb(21,21,22)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(25,25,26) 0%,rgb(21,21,22) 100%);
+    background-image: linear-gradient(0deg,rgb(21,21,22) 0%,rgb(25,25,26) 100%);
+	
+}
+.wz-app-3 .preferences-account-middle article.active figure{
+	
+	padding: 0px;
+	border: 1px solid #245276;
+	border-left: none;
+
+}
+
+.wz-app-3 .preferences-account-middle article figure i{
+	
+	width: 24px;
+	height: 24px;
+	display: block;
+	margin-top: 10px;
+	margin-left: 5px;
+	background: url('https://static.weezeel.com/app/3/sprite_account.png') no-repeat;
+	
+}
+
+.wz-app-3 .preferences-account-middle article figure i.process{
+	background-position: 0px 0px;
+}
+
+.wz-app-3 .preferences-account-middle article figure i.error{
+	background-position: -24px 0px;
+}
+
+.wz-app-3 .preferences-account-middle article figure i.tick{
+	background-position: -48px 0px;
+}
+
+.wz-app-3 .preferences-account-bottom{
+	width: 409px;
+	height: 60px;
+	margin: 0 auto;
+}
+
+.wz-app-3 .preferences-account-bottom article{
+	
+	width: 180px;
+	height: 30px;
+	float: left;
+	margin: 0px 8px;
+	border-radius: 2px;
+	border-top: 1px solid #4B4B4D;
+	padding-top: 15px;
+	text-align: center;
+	box-shadow: 0 1px 1px #111;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(54,54,57)),color-stop(1, rgb(39,39,41)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(54,54,57) 0%,rgb(39,39,41) 100%);
+    background-image: linear-gradient(0deg,rgb(39,39,41) 0%,rgb(54,54,57) 100%);
+	
+}
+
+.wz-app-3 .preferences-account-bottom article span{
+	
+	font-size: 15px;
+	color: #FFF;
+	margin-bottom: 6px;
+	
+}
+
+.wz-app-3 .preferences-account-bottom article.active{
+	
+	border-top: 1px solid #50BDFF;
+	
+	background-image: -moz-linear-gradient(50% 0% -90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%); 
+    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0, rgb(60,181,255)),color-stop(1, rgb(44,153,255)));
+    background-image: -webkit-linear-gradient(-90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%);
+    background-image: -o-linear-gradient(-90deg,rgb(60,181,255) 0%,rgb(44,153,255) 100%);
+    background-image: linear-gradient(0deg,rgb(44,153,255) 0%,rgb(60,181,255) 100%);
+	
+}
+
+/*FIN FRAGMENTO ACCOUNT */
+
+.wz-app-3 .preferences-bottom-content.hdd{
+	
+	display: inline-block;
+	margin-top: 50px;
+	display: none;
+	
+}
+
+.wz-app-3 .preferences-bottom-content.account{
+	
+	display: inline-block;
+	margin-top: 25px;
+	display: none;
+	
+}
+
+.wz-app-3 .preferences-bottom-content.password{
+	
+	display: inline-block;
+	margin-top: 25px;
+	/*display: none;*/
+	
+}
+
+.wz-app-3 .preferences-bottom-content.language{
+	
+	display: inline-block;
+	margin-top: 25px;
+	display: none;
+	
+}
+
+.wz-app-3 .preferences-bottom-content.date-time{
+	
+	display: inline-block;
+	margin-top: 25px;
+	display: none;
+	
+}
+
+.wz-app-3 .preferences-bottom-content.wallpaper{
+	
+	display: inline-block;
+	margin-top: 25px;
+	display: none;
+	
+}
+
+.wz-app-3 .preferences-bottom-content.about{
+	
+	display: inline-block;
+	margin-top: 25px;
+	display: none;
+	
+}
