Preferences - Menu hover added

--- a/static/style.css
+++ b/static/style.css
@@ -43,13 +43,27 @@
 	display: inline-block;
 	font-size: 15px;
 	color: #8D8D8D;
-	height: 24px;
+	height: 26px;
 	margin: 0 20px;
 	cursor: pointer;
 	
 }
 
 .wz-app-3 .preferences-top li.active{
+	
+	color: #FFFFFF;
+	box-shadow: 0 5px 3px -3px #34A7FF;
+	cursor: default;	
+	
+}
+
+.wz-app-3 .preferences-top li:hover{
+	
+	box-shadow: 0 5px 3px -3px #FFF;
+	
+}
+
+.wz-app-3 .preferences-top li.active:hover{
 	
 	color: #FFFFFF;
 	box-shadow: 0 5px 3px -3px #34A7FF;
