--- a/static/style.css
+++ b/static/style.css
@@ -788,7 +788,7 @@
 
 .wz-app-3 .preferences-bottom-content.language{
     
-    margin-top: 25px;
+    margin-top: 40px;
     display: none;
     opacity: 0;
     
@@ -796,7 +796,7 @@
 
 .wz-app-3 .preferences-bottom-content.date-time{
     
-    margin-top: 25px;
+    margin-top: 40px;
     display: none;
     opacity: 0;
     
@@ -804,7 +804,7 @@
 
 .wz-app-3 .preferences-bottom-content.wallpaper{
     
-    margin-top: 25px;
+    margin-top: 40px;
     display: none;
     opacity: 0;
     
@@ -821,8 +821,14 @@
 
 .wz-app-3 .preferences-bottom-content.about{
     
-    margin-top: 25px;
+    margin-top: 40px;
     display: none;
     opacity: 0;
     
+}
+
+/* En el futuro borrar esta clase */
+
+.wz-app-3 .preferences-error{
+    color: #FFF;
 }
